<resources>
    <string name="app_name">My Books App</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_about">About</string>
    <string name="name">Nanda Arya Putra</string>
    <string name="email">nandaarya404@gmail.com</string>
    <string name="nanda_image">Foto Nanda Arya Putra</string>
    <string name="search_book">Search using book\'s title…</string>
    <string name="book_title">Judul Buku: %s</string>
    <string name="author_name">Nama Penulis: %s</string>
    <string name="publication_year">Tahun Terbit: %s</string>
    <string name="category">Kategori: %s</string>
    <string name="back">Back</string>
    <string name="detail_screen">Detail</string>
    <string name="favorite_screen">Favorite Books</string>
    <string name="about_screen">About</string>
    <string name="add_screen">Tambah Buku</string>
    <string name="enter_book_title">Masukkan Judul Buku</string>
    <string name="book_title_label">Judul Buku</string>
    <string name="book_cover_url_label">URL Cover Buku</string>
    <string name="author_name_label">Nama Penulis</string>
    <string name="publication_year_label">Tahun Terbit</string>
    <string name="category_label">Kategori</string>
    <string name="synopsis_label">Sinopsis</string>
    <string name="add_new_book">Masukkan Data Buku Baru</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="book_data">Data Buku</string>
    <string name="list_empty_message">No Books Saved :(</string>
    <string name="add_book_button">Add Book Button</string>
    <string name="add_book">Tambah Buku</string>
    <string name="enter_url_book_cover">Masukkan URL Cover Buku</string>
    <string name="enter_author_name">Masukkan Nama Penulis</string>
    <string name="enter_publication_year">Masukkan Tahun Terbit</string>
    <string name="enter_category">Masukkan Kategori</string>
    <string name="enter_synopsis">Masukkan Sinopsis</string>
</resources>